maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: not found: value keepHandsOnWall
      virage = keepHandsOnWall(virage)
               ^